Working on navbar with router

--- a/src/css/VideoBackground.css
+++ b/src/css/VideoBackground.css
@@ -1,7 +1,8 @@
-.main {
+/* previously on 1st div in Home.js */
+/* .main {
     width: 100vh;
     height: 100vh;
-}
+} */
 
 video {
     width: 100%;
