--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -8,3 +8,8 @@
 .nav-link:hover {
     text-decoration-color: #030627;
 }
+
+h1 {
+    -webkit-text-stroke-width: 0.25px;
+    -webkit-text-stroke-color: #030627;
+}
